# symnet

./: README.md  main.py  probe.py  pyproject.toml  requirements.txt  train.py  verify.py
checkpoints/: comm_vectors_2048.pkl
comm_logs/: comm_2048.pt
logs/: training.csv
symnet/: __init__.py  reward.py  utils.py
symnet/env/: env_wrapper.py  gridworld.py  minigrid_wrapper.py
symnet/models/: __init__.py  mamba_minimal.py  symnet_model.py
symnet/rl/: __init__.py  buffer.py  ppo.py  rms.py  rnd.py
tests/: __init__.py  test_gridworld.py  test_model.py
