[project]
name = "symnet"
version = "0.1.0"
description = "Symmetric Dual-Agent RL with Emergent Communication"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "einops>=0.7",
    "gymnasium>=0.29",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "torch>=2.1; sys_platform != 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
